--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@giphy/js-fetch-api": "^5.6.0",
-    "framer-motion": "^12.8.0",
+    "framer-motion": "^12.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "sass": "^1.87.0"
   },
